fix fix captial

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,10 +17,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: REUSE
+      - name: Reuse
         uses: benc-uk/workflow-dispatch@v1
         with:
-          workflow: Reuse
+          workflow: REUSE
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: KiBot
